<resources>
    <string name="app_name">EatAppServer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_category">Категории</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="your_name">Ваше Имя</string>
    <string name="menu_home">Домой</string>
    <string name="menu_food_detail">Детали блюда</string>
    <string name="popular_categories">Популярное</string>
    <string name="best_deals">Лучшие предложения</string>
    <string name="menu_menu">Категории</string>
    <string name="menu_food_list">Список блюд</string>
    <string name="name_of_food">Название блюда</string>
    <string name="_100">$100</string>
    <string name="description">Описание</string>
    <string name="food_name">Название блюда</string>
    <string name="show_comment">Показать комментарии</string>
    <string name="text_review">Пожалуйтса, оставьте отзыв</string>
    <string name="name">Имя</string>
    <string name="comment">Комментарий</string>
    <string name="size">Размер</string>
    <string name="add_on">Добавки</string>
    <string name="addon_search">Поиск</string>
    <string name="example">Пример</string>
    <string name="menu_cart">Корзина</string>
    <string name="sign_out">Выход</string>
    <string name="cart_is_empty">Корзина пуста</string>
    <string name="total_0_0">Total: 0,0</string>
    <string name="place_order">Оставить заказ</string>
    <string name="cart">Корзина</string>
    <string name="_100_0">100.0</string>
    <string name="action_clear_cart">Очистить карту</string>
    <string name="delivery_method">Способ доставки</string>
    <string name="home_address">Домашний адрес</string>
    <string name="another_address">Другой адрес</string>
    <string name="deliver_to_this_address">Указать адрес</string>
    <string name="payment_method">Способ оплаты</string>
    <string name="cash_payment">Наличными</string>
    <string name="braintree">Картой</string>
    <string name="enter_your_address">Введите адрес</string>
    <string name="enter_your_comment">Оставьте комментарий</string>
    <string name="menu_view_orders">Просмотр заказов</string>
    <string name="today_at_13_05_56_pm">Today at: 13:05:56 pm</string>
    <string name="order_number">Номер заказа:</string>
    <string name="order_comment">Комментарий к заказу:</string>
    <string name="category_name">Название категории</string>
    <string name="food_price">Цена блюда</string>
    <string name="food_description">Описание блюда</string>
    <string name="addon_size_name"> Название Добавки/Размер</string>
    <string name="addon_size_price">Цена Добавки/Размера</string>
    <string name="create">Создать</string>
    <string name="edit">Редактировать</string>
    <string name="size_name">Размер</string>
    <string name="_6">$6</string>
    <string name="save">Сохранить</string>
    <string name="action_search">Поиск</string>
    <string name="menu_order">Заказы</string>
    <string name="menu_sign_out">Выход</string>
    <string name="_26_11_2019_13_05_06">26/11/2019 13:05:06</string>
    <string name="order_date_woah_letters">Order date: abcdefasdasdadadaads</string>
    <string name="name_senya">Name: Senya</string>
    <string name="order_status_placed">Order Status: Placed</string>
    <string name="num_of_items_10">Num of items: 10</string>
    <string name="action_filter">Фильтр</string>
    <string name="placed">Оставлен</string>
    <string name="shipping">В доставке</string>
    <string name="shipped">Доставлен</string>
    <string name="cancelled">Отменен</string>
    <string name="orders_0">Orders (0)</string>
    <string name="update_order">Обновить заказ</string>
    <string name="update_order_status">Обновить статус заказа</string>
    <string name="status_placed">Status: Placed</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="restore_placed">Restore Placed</string>
    <string name="delete">Удалить</string>
    <string name="shipper_01">Shipper 01</string>
    <string name="_191519195151">+191519195151</string>
    <string name="menu_shipper">Курьеры</string>
    <string name="_79555555555">+79555555555</string>
    <string name="order_details">Детали заказа</string>
    <string name="thai_salad_style">THAI SALAD STYLE</string>
    <string name="quantity_1">Quantity: 1</string>
    <string name="addon_default">Addon: Default</string>
    <string name="size_medium">Size: Medium</string>
    <string name="google_maps_key">AIzaSyAZ3DCYdVbTMSaFM735f3YSUnxr8Cm15_k</string>
    <string name="title_activity_tracking_order">TrackingOrderActivity</string>
    <string name="menu_best_deals">Лучшие предложение</string>
    <string name="menu_most_popular">Популярное</string>
    <string name="menu_send_news">NСистема новостей</string>
    <string name="title">Заголовок</string>
    <string name="content">Контент</string>
    <string name="send_image">Отправить картинку</string>
    <string name="none">Ничего</string>
    <string name="upload">Загрузить</string>
    <string name="link">Ссылка</string>
    <string name="arsshvets_gmail_com">arsshvets@gmail.com</string>
    <string name="bubblelayoutwafawfawffawfawfaffawfawfafafafafafafawfafawfafafawfawf">BubbleLayoutwafawfawffawfawfaffawfawfafafafafafafawfafawfafafawfawf</string>
    <string name="your_message">Ваше сообщение</string>
    <string name="bubblelayoutazazapaaapapapapawwaawa">bubblelayoutazazapaaapapapapawwaawa</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="menu_location">Местоположение</string>
</resources>